# catEncodersProject

./: README.md  README.rst  abcd.py  catencfamily.py  pyproject.toml  readthedocs.yaml  xyz.py
docs/source/: abcd.rst  conf.py  index.rst  modules.rst  xyz.rst
