[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "docs/source/modules.rst"  # Replace with the actual module path of your documentation

[project]
name = "catEncodersProject"
authors = [{name = "Prof. Ashok Harnal", email = "ccma@fsm.ac.in"}]
dynamic = ["version", "description"]
